2007-03-08  Nicholas Humfrey  <njh@aelius.com>

	* Added lo_server_thread_new_with_proto(), as suggested by Dave Robillard
	* Applied patch from Aron Stansvik to fix bug with FreeBSD/NetBSD systems
	* Removed freeaddrinfo() from resolve_address() error case (thanks to Anthony Green)
	

2006-03-29  Nicholas Humfrey  <njh@aelius.com>

	* Applied lo_address_get_url() patch from Sze'kelyi Szabolcs
	* Added lo_server_get_protocol() and lo_address_get_protocol()
	* Added tests for lo_address_get_* tests to test tool

2006-01-26  Nicholas Humfrey  <njh@aelius.com>

	* IPv6 is now disabled by default
	* Released version 0.23

2005-12-29  Nicholas Humfrey  <njh@aelius.com>

	* Fixed pthread resource leak, when stopping thread

2005-12-21  Nicholas Humfrey  <njh@aelius.com>

	* Fixed bug where sockets weren't closed when replying to messages
	* Split off resolve_address into seperate create_socket function
	* Only creates new sockets when needed

2005-12-05  Nicholas Humfrey  <njh@aelius.com>

	* Added lo_send_from, lo_send_message_from and lo_send_bundle_from
	* Merged guts of lo_send_message and lo_send_bundle into new static send_data()

2005-09-04  Steve Harris  <steve@plugin.org.uk>

	* Released 0.22

2005-09-02  Steve Harris  <steve@plugin.org.uk>

	* address.c, server.c: Added patch from Martin Habets that redoes
	  parts of previous patches...

2005-09-01  Steve Harris  <steve@plugin.org.uk>

	* address.c, server.c: Added patches from Jesse Chappell and Dave
	  Robillard to close various sockets when there no longer used.

2005-08-19  Steve Harris  <steve@plugin.org.uk>

	* address.c, testlo.c: Added patch from Dave Robillard to fix parsing
	  of IPV6 addresses in URLs.

2005-08-11  Martin Habets  <mhabets@users.sourceforge.net>

	* message.c: Fix LO_CHAR sending on big endian architectures.

2005-08-09  Martin Habets  <mhabets@users.sourceforge.net>

	* server.c: Add lo_server_del_method()
	* server_thread.c: Add lo_server_thread_del_method()
